# houjing_svg_rust

./: .gitignore  Cargo.toml
src/: README.md  main.rs
src/core/: SVG.rs  collection.rs  data.rs  geometry.rs  mod.rs  proc.rs  shape.rs
src/synthesis/: solver.rs
